--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="icon" href="%PUBLIC_URL%/uziday.logo.png">
+    <link rel="icon" href="%PUBLIC_URL%/favicon-1.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
+    <meta name="google-site-verification" content="M-QcrWIR0ppf_zXfanAsbaO9i6bF3DdFnkN3vE0EaCY" />
     <meta name="theme-color" content="#F45E3E">
-    <!--
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129958096-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-129958096-1');
+    </script>
+      <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
