--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="google-site-verification" content="M-QcrWIR0ppf_zXfanAsbaO9i6bF3DdFnkN3vE0EaCY" />
     <link rel="icon" href="%PUBLIC_URL%/favicon-1.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
     <meta name="google-site-verification" content="M-QcrWIR0ppf_zXfanAsbaO9i6bF3DdFnkN3vE0EaCY" />
