--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>UziDay | MVP</title>
+    <title>UziDay</title>
   </head>
   <body>
     <noscript>
